--- a/package.json
+++ b/package.json
@@ -71,11 +71,13 @@
   },
   "dependencies": {
     "appable": "^1.2.2",
+    "babel-plugin-prismjs": "^2.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "material-design-icons": "^3.0.1",
-    "material-design-lite": "^1.3.0"
+    "material-design-lite": "^1.3.0",
+    "prismjs": "^1.23.0"
   }
 }
