--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.1",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production",
-    "appable": "appable",
-    "cordova": "cordova",
-    "res": "cordova-res",
+    "dev": "cross-env NODE_ENV=development webpack serve --open --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
     "android": "cordova run android --device",
     "android:build": "npm run build & npm run android",
     "android:install": "cordova platform add android",
     "test": "cross-env NODE_ENV=test mocha --require @babel/register --recursive test/unit",
-    "test:coverage": "cross-env NODE_ENV=test nyc mocha --recursive test/unit",
-    "test:coveralls": "npm run test:coverage -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+    "test:coverage": "cross-env NODE_ENV=test nyc --reporter=lcovonly --reporter=text npm test",
+    "test:coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls"
   },
   "sass": "src/index",
   "main": "src/index",
@@ -31,53 +28,56 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/register": "^7.10.5",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "babel-plugin-transform-html-import-to-string": "0.0.1",
-    "browser-sync": "^2.26.12",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "chai": "^4.2.0",
-    "cordova": "^10.0.0",
-    "cordova-android": "^9.0.0",
-    "cordova-plugin-navigationbar-color": "^0.1.0",
-    "cordova-plugin-splashscreen": "git+https://github.com/goinnn/cordova-plugin-splashscreen.git#4.0.0#colors",
-    "cordova-res": "^0.15.1",
-    "coveralls": "^3.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "file-loader": "^6.0.0",
-    "jsdom": "^16.4.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "mocha": "^8.1.1",
-    "mocha-lcov-reporter": "^1.3.0",
-    "node-sass": "^4.14.1",
-    "nyc": "^15.1.0",
-    "raw-loader": "^4.0.1",
-    "sass-loader": "^9.0.3",
-    "sinon": "^9.0.3",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "@babel/cli": "latest",
+    "@babel/core": "latest",
+    "@babel/plugin-transform-runtime": "latest",
+    "@babel/preset-env": "latest",
+    "@babel/register": "latest",
+    "babel-eslint": "latest",
+    "babel-loader": "latest",
+    "babel-plugin-istanbul": "latest",
+    "babel-plugin-transform-html-import-to-string": "latest",
+    "chai": "latest",
+    "cordova": "latest",
+    "cordova-android": "latest",
+    "cordova-plugin-navigationbar-color": "latest",
+    "cordova-plugin-splashscreen": "github:goinnn/cordova-plugin-splashscreen#4.0.0#colors",
+    "cordova-res": "latest",
+    "coveralls": "latest",
+    "cross-env": "latest",
+    "css-loader": "latest",
+    "eslint": "latest",
+    "eslint-config-airbnb-base": "latest",
+    "eslint-plugin-import": "latest",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "latest",
+    "mini-css-extract-plugin": "latest",
+    "mocha": "latest",
+    "mocha-lcov-reporter": "latest",
+    "node-sass": "latest",
+    "nyc": "latest",
+    "raw-loader": "latest",
+    "sass-loader": "latest",
+    "sinon": "latest",
+    "style-loader": "latest",
+    "webpack": "latest",
+    "webpack-cli": "latest",
+    "webpack-dev-server": "latest"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
-    "appable": "^1.2.2",
-    "babel-plugin-prismjs": "^2.0.1",
-    "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-headercolor": "^1.0.0",
-    "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
+    "appable": "latest",
+    "babel-plugin-prismjs": "latest",
+    "cordova-plugin-device": "latest",
+    "cordova-plugin-headercolor": "latest",
+    "cordova-plugin-statusbar": "latest",
+    "cordova-plugin-whitelist": "latest",
+    "jsdom": "latest",
     "material-design-icons": "^3.0.1",
-    "material-design-lite": "^1.3.0",
-    "prismjs": "^1.23.0"
+    "material-design-lite": "latest",
+    "prismjs": "latest",
+    "url-loader": "^4.1.1"
   }
 }
