--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "programmation-lab",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development webpack serve --open --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "android": "cordova run android --device",
-    "android:build": "npm run build & npm run android",
+    "android:build": "npm run build & cordova build android --release -- --packageType=bundle",
     "android:install": "cordova platform add android",
+    "android:run": "npm run build & npm run android",
     "test": "cross-env NODE_ENV=test mocha --require @babel/register --recursive test/unit",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=lcovonly --reporter=text npm test",
     "test:coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls"
@@ -23,8 +24,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-headercolor": {},
       "cordova-plugin-navigationbar-color": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-splashscreen": {}
     }
   },
   "devDependencies": {
@@ -40,8 +41,11 @@
     "chai": "latest",
     "cordova": "latest",
     "cordova-android": "^9.1.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-navigationbar-color": "latest",
-    "cordova-plugin-splashscreen": "github:goinnn/cordova-plugin-splashscreen#4.0.0#colors",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.5",
     "cordova-res": "^0.15.3",
     "coveralls": "latest",
@@ -71,9 +75,6 @@
   "dependencies": {
     "appable": "latest",
     "babel-plugin-prismjs": "latest",
-    "cordova-plugin-device": "latest",
-    "cordova-plugin-headercolor": "latest",
-    "cordova-plugin-statusbar": "latest",
     "jsdom": "latest",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "latest",
