--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development webpack serve --open --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "android": "npm run build & cordova run android --device",
-    "android:build": "npm run build & cordova build android --release -- --packageType=bundle",
-    "android:emulate": "npm run build & cordova run android --emulator",
+    "android": "npm run build && cordova run android --device",
+    "android:build": "npm run build && cordova build android --release -- --packageType=bundle",
+    "android:emulate": "npm run build && cordova run android --emulator",
     "android:install": "cordova platform add android",
-    "ios": "npm run build & cordova run ios --device",
-    "ios:emulate": "npm run build & cordova run ios --emulator",
+    "ios": "npm run build && cordova run ios --device",
+    "ios:emulate": "npm run build && cordova run ios --emulator",
     "ios:install": "cordova platform add ios",
     "test": "cross-env NODE_ENV=test mocha --require @babel/register --recursive test/unit",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=lcovonly --reporter=text npm test",
