--- a/package.json
+++ b/package.json
@@ -48,19 +48,19 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-headercolor": "^1.0.0",
-    "cordova-plugin-navigationbar-color": "latest",
+    "cordova-plugin-navigationbar-color": "^0.1.0",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.5",
-    "cordova-res": "^0.15.3",
+    "cordova-res": "latest",
     "coveralls": "latest",
     "cross-env": "latest",
     "css-loader": "latest",
     "eslint": "latest",
     "eslint-config-airbnb-base": "latest",
     "eslint-plugin-import": "latest",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "latest",
+    "ios-deploy": "latest",
     "mini-css-extract-plugin": "latest",
     "mocha": "latest",
     "mocha-lcov-reporter": "latest",
@@ -70,20 +70,20 @@
     "sass-loader": "latest",
     "sinon": "latest",
     "style-loader": "latest",
+    "url-loader": "latest",
     "webpack": "latest",
     "webpack-cli": "latest",
     "webpack-dev-server": "latest"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "dependencies": {
     "appable": "latest",
     "babel-plugin-prismjs": "latest",
     "jsdom": "latest",
-    "material-design-icons": "^3.0.1",
+    "material-design-icons": "latest",
     "material-design-lite": "latest",
-    "prismjs": "latest",
-    "url-loader": "^4.1.1"
+    "prismjs": "latest"
   }
 }
