--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-headercolor": {},
       "cordova-plugin-navigationbar-color": {},
-      "cordova-plugin-whitelist": {},
       "cordova-plugin-splashscreen": {}
     }
   },
@@ -44,14 +43,13 @@
     "babel-plugin-transform-html-import-to-string": "latest",
     "chai": "latest",
     "cordova": "latest",
-    "cordova-android": "^9.1.0",
-    "cordova-ios": "^6.2.0",
+    "cordova-android": "^10.0.0",
+    "cordova-ios": "latest",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-navigationbar-color": "^0.1.0",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.5",
     "cordova-res": "latest",
     "coveralls": "latest",
     "cross-env": "latest",
