--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "cross-env NODE_ENV=development webpack serve --open --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "android": "npm run build && cordova run android --device",
-    "android:build": "npm run build && cordova build android --release -- --packageType=bundle",
+    "android:build": "npm run build && cordova build android --release",
     "android:emulate": "npm run build && cordova run android --emulator",
     "android:install": "cordova platform add android",
     "ios": "npm run build && cordova run ios --device",
